gap between buttons fixed

--- a/FocusApp/src/app/common/buttons/option-menu-button/option-menu-button.scss
+++ b/FocusApp/src/app/common/buttons/option-menu-button/option-menu-button.scss
@@ -8,7 +8,7 @@
 
 .option-menu-button-text{
     font-family: 'Inter', sans-serif; // używasz zaimportowanego fontu
-    font-size: 20px;                  // rozmiar tekstu w pikselach
+    font-size: 14px;                  // rozmiar tekstu w pikselach
     font-weight: bold;                // lub 700 (np. font-weight: 700;)
     @media (min-width: 576px) {
     font-size: 20px;  // średni ekran (sm)
