--- a/FocusApp/src/app/common/buttons/sound-button/sound-button.scss
+++ b/FocusApp/src/app/common/buttons/sound-button/sound-button.scss
@@ -7,7 +7,10 @@
     border: solid #DBE5DF;
     border-radius: 20px;
     transition: transform 0.15s ease-in-out;
+    width: 180px;
+    @media (min-width: 576px) {
     width: 200px;
+    }  
 
   &:hover {
     transform: scale(1.05); // powiększa o 10%
